--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.0",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "axios": "^1.1.3",
     "chartjs": "^0.3.24",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
