--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
       "dom.iterable",
       "esnext"
     ],
+    "types": [
+      "node"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -22,5 +25,5 @@
   },
   "include": [
     "src"
-  ]
+, "public/test1.js"  ]
 }
